--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -24,6 +24,7 @@
     <ProjectGuid>{5e4c3084-97a4-4843-a149-5f37247049e8}</ProjectGuid>
     <RootNamespace>Tutorial7Base</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Graficas2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -131,7 +132,22 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Basebuffers.h" />
+    <ClInclude Include="ConstantBuffer.h" />
+    <ClInclude Include="DepthStecil.h" />
+    <ClInclude Include="Dx11DepthStecil.h" />
+    <ClInclude Include="Dx11PixelShader.h" />
+    <ClInclude Include="Dx11SwapChain.h" />
+    <ClInclude Include="Dx11VertexShader.h" />
+    <ClInclude Include="Dx11ConstantBuffer.h" />
+    <ClInclude Include="Dx11indexBuffer.h" />
+    <ClInclude Include="Dx11VertexBuffer.h" />
+    <ClInclude Include="Indexbuffer.h" />
+    <ClInclude Include="PixelShader.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SwapChain.h" />
+    <ClInclude Include="Vertexbuffer.h" />
+    <ClInclude Include="VertexShader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Tutorial07.fxh" />
