Add global variables and new DepthStencilView header
- Updated `CBChangesEveryFrame` struct in `Source.cpp` to include global variables `g_hInst` and `g_hWnd`, both initialized to `nullptr`.
- Included `DepthStencilView.h` in `Tutorial7Base.vcxproj` for compilation.
- Updated `Tutorial7Base.vcxproj.filters` to organize `DepthStencilView.h` under "Header Files".
- Created `DepthStencilView.h` with `#pragma once` to prevent multiple inclusions.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Basebuffers.h" />
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="DepthStecil.h" />
+    <ClInclude Include="DepthStencilView.h" />
     <ClInclude Include="Dx11DepthStecil.h" />
     <ClInclude Include="Dx11PixelShader.h" />
     <ClInclude Include="Dx11SwapChain.h" />
