Add DX11GRAPI and GRAPI header files for graphics API
Updated project and filters files to include new headers:
- Added `DX11GRAPI.H` with `Dx11GraphicsAPI` class.
- Created `GRAPI.h` defining the `GraphicsAPI` interface.
- Ensured proper organization of header files in the project.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -138,12 +138,14 @@
     <ClInclude Include="DepthStencilView.h" />
     <ClInclude Include="Dx11DepthStecil.h" />
     <ClInclude Include="Dx11DepthStecilView.h" />
+    <ClInclude Include="DX11GRAPI.H" />
     <ClInclude Include="Dx11PixelShader.h" />
     <ClInclude Include="Dx11SwapChain.h" />
     <ClInclude Include="Dx11VertexShader.h" />
     <ClInclude Include="Dx11ConstantBuffer.h" />
     <ClInclude Include="Dx11indexBuffer.h" />
     <ClInclude Include="Dx11VertexBuffer.h" />
+    <ClInclude Include="GRAPI.h" />
     <ClInclude Include="Indexbuffer.h" />
     <ClInclude Include="PixelShader.h" />
     <ClInclude Include="Resource.h" />
