Refactor DirectX 11 API and add IndexBuffer support
Refactored header includes by introducing `ContainerFiles.h` to consolidate DirectX 11 container-related headers. Updated `GRAPI` and `Dx11GraphicsAPI` to include a new `CreateIndexBuffer` method. Added a placeholder implementation for `CreateIndexBuffer` in `Dx11GraphicsAPI`. Improved code readability and formatting across multiple files. Updated project files to include the new `ContainerFiles.h`. Cleaned up unused variables and comments in `Source.cpp`.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="Basebuffers.cpp" />
     <ClCompile Include="ConstantBuffer.cpp" />
+    <ClCompile Include="ContainerFiles.h" />
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
     <ClCompile Include="DX11GRAPI.cpp" />
     <ClCompile Include="GRAPI.cpp" />
