Refactor DX11 API and improve shader handling
Refactored the DX11 graphics API to simplify shader and depth-stencil management. Introduced `BaseShaders` for shared shader functionality and updated `VertexShader` and `PixelShader` classes to inherit from it. Replaced raw `ID3D11*Shader` pointers with `std::shared_ptr`-based objects for better resource management.

Implemented `CreateDepthStencil` to encapsulate depth-stencil creation. Updated `Source.cpp` to use the new API, including refactored rendering and cleanup logic. Removed unused global variables and improved code consistency.

Updated project files to include new `BaseShaders` files. General cleanup and formatting improvements across the codebase.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -130,6 +130,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Basebuffers.cpp" />
+    <ClCompile Include="BaseShaders.cpp" />
+    <ClCompile Include="BaseShaders.h" />
     <ClCompile Include="ConstantBuffer.cpp" />
     <ClCompile Include="ContainerFiles.h" />
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
