--- a/Tutorial7Base/Tutorial7Base.vcxproj.filters
+++ b/Tutorial7Base/Tutorial7Base.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="Vertexbuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BaseShaders.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseShaders.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
