Refactor and enhance rendering pipeline components
- Updated `BaseBuffer` to support default byte width and made `m_byteWidth` protected for better extensibility.
- Added `BindRenderElement` and `ClearRenderElement` methods to `CommandBuffer` for managing render elements.
- Introduced `RenderElement` class to encapsulate rendering resources like constant buffers, vertex buffers, and shaders.
- Introduced `RenderPass` class to manage binding of render elements and constant buffers to the command buffer.
- Enhanced `ConstantBuffer` with raw data management, update tracking, and memory handling.
- Refactored `Dx11CommandBuffer` to use the new `ConstantBuffer` methods, removing redundant logic.
- Updated project files to include new `RenderElement` and `RenderPass` classes.
- Removed unused code and improved overall code organization.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -139,6 +139,8 @@
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
     <ClCompile Include="DX11GRAPI.cpp" />
     <ClCompile Include="GRAPI.cpp" />
+    <ClCompile Include="RenderElement.cpp" />
+    <ClCompile Include="RenderPass.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Vertexbuffer.cpp" />
   </ItemGroup>
@@ -161,6 +163,8 @@
     <ClInclude Include="GRAPI.h" />
     <ClInclude Include="Indexbuffer.h" />
     <ClInclude Include="PixelShader.h" />
+    <ClInclude Include="RenderElement.h" />
+    <ClInclude Include="RenderPass.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SwapChain.h" />
     <ClInclude Include="Vertexbuffer.h" />
