Refactor CommandBuffer and add Pass class support
Simplified memory management in CommandBuffer by removing
m_PendingConstantBufferData and updating BindConstBuffer
to use const references.

Introduced a new Pass class to encapsulate rendering passes
and integrated it with the CommandBuffer system. Updated
DX11GRAPI to support DispatchCommandBufer and RenderPass
methods for improved rendering pipeline flexibility.

Updated project files to include the new Pass class.
Refactored related code for clarity and maintainability.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
     <ClCompile Include="DX11GRAPI.cpp" />
     <ClCompile Include="GRAPI.cpp" />
+    <ClCompile Include="Pass.cpp" />
     <ClCompile Include="RenderElement.cpp" />
     <ClCompile Include="RenderPass.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Dx11VertexBuffer.h" />
     <ClInclude Include="GRAPI.h" />
     <ClInclude Include="Indexbuffer.h" />
+    <ClInclude Include="Pass.h" />
     <ClInclude Include="PixelShader.h" />
     <ClInclude Include="RenderElement.h" />
     <ClInclude Include="RenderPass.h" />
