Refactor rendering pipeline and add topology abstraction
Refactored the rendering pipeline by introducing a `Topology` class
and its DirectX implementation (`Dx11Topology`) to handle primitive
topologies. Added a `Pass` class to manage rendering passes and
extended `CommandBuffer` to support `RenderElement` objects and
their constant buffers.

Removed the unused `CommandBuffer::IsbuffReady` method and added
a `SAFE_RELEASE` macro for safer resource management. Updated
`Dx11GraphicsAPI` to support creating and setting `Topology`
objects, as well as creating and rendering `Pass` objects.

Modified `Source.cpp` to use the new `Topology` system. Added
new source and header files for `Topology` and updated Visual
Studio project files to include them. Improved code maintainability
and modularity by removing unused methods and adding documentation.

--- a/Tutorial7Base/Tutorial7Base.vcxproj
+++ b/Tutorial7Base/Tutorial7Base.vcxproj
@@ -138,11 +138,13 @@
     <ClCompile Include="Dx11CommandBuffer.cpp" />
     <ClCompile Include="Dx11ConstantBuffer.cpp" />
     <ClCompile Include="DX11GRAPI.cpp" />
+    <ClCompile Include="Dx11Topology.cpp" />
     <ClCompile Include="GRAPI.cpp" />
     <ClCompile Include="Pass.cpp" />
     <ClCompile Include="RenderElement.cpp" />
     <ClCompile Include="RenderPass.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Topology.cpp" />
     <ClCompile Include="Vertexbuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +159,7 @@
     <ClInclude Include="DX11GRAPI.h" />
     <ClInclude Include="Dx11PixelShader.h" />
     <ClInclude Include="Dx11SwapChain.h" />
+    <ClInclude Include="Dx11Topology.h" />
     <ClInclude Include="Dx11VertexShader.h" />
     <ClInclude Include="Dx11ConstantBuffer.h" />
     <ClInclude Include="Dx11indexBuffer.h" />
@@ -169,6 +172,7 @@
     <ClInclude Include="RenderPass.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SwapChain.h" />
+    <ClInclude Include="Topology.h" />
     <ClInclude Include="Vertexbuffer.h" />
     <ClInclude Include="VertexShader.h" />
   </ItemGroup>
